index.css
@import url('https://fonts.googleapis.com/css?family=Share+Tech+Mono:400,700');

:root {
  /*--secondary-gradient-color: #FF7A00;
  --primary-gradient-color: #FF7A00;*/
  /* old colors: linear-gradient(to top, #5B3ADC 0%, #305AED 100%) */
  --page-orange: #ff7a00;
  --page-white: #fdfdfd;
}

body {
    background-color: var(--page-orange);
    /*background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='83' height='41.5' viewBox='0 0 83 41.5'%3E%3Cdefs%3E%3Crect stroke='%23ff890a' stroke-width='0.1' width='1' height='1' id='s'/%3E%3Cpattern id='a' width='2' height='2' patternUnits='userSpaceOnUse'%3E%3Cg stroke='%23ff890a' stroke-width='0.1'%3E%3Crect fill='%23ff8b0f' width='1' height='1'/%3E%3Crect fill='%23ff890a' width='1' height='1' x='1' y='1'/%3E%3Crect fill='%23ff8e14' width='1' height='1' y='1'/%3E%3Crect fill='%23ff9019' width='1' height='1' x='1'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='b' width='5' height='11' patternUnits='userSpaceOnUse'%3E%3Cg fill='%23ff921e'%3E%3Cuse xlink:href='%23s' x='2' y='0'/%3E%3Cuse xlink:href='%23s' x='4' y='1'/%3E%3Cuse xlink:href='%23s' x='1' y='2'/%3E%3Cuse xlink:href='%23s' x='2' y='4'/%3E%3Cuse xlink:href='%23s' x='4' y='6'/%3E%3Cuse xlink:href='%23s' x='0' y='8'/%3E%3Cuse xlink:href='%23s' x='3' y='9'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='c' width='7' height='7' patternUnits='userSpaceOnUse'%3E%3Cg fill='%23ff9523'%3E%3Cuse xlink:href='%23s' x='1' y='1'/%3E%3Cuse xlink:href='%23s' x='3' y='4'/%3E%3Cuse xlink:href='%23s' x='5' y='6'/%3E%3Cuse xlink:href='%23s' x='0' y='3'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='d' width='11' height='5' patternUnits='userSpaceOnUse'%3E%3Cg fill='%23ff890a'%3E%3Cuse xlink:href='%23s' x='1' y='1'/%3E%3Cuse xlink:href='%23s' x='6' y='3'/%3E%3Cuse xlink:href='%23s' x='8' y='2'/%3E%3Cuse xlink:href='%23s' x='3' y='0'/%3E%3Cuse xlink:href='%23s' x='0' y='3'/%3E%3C/g%3E%3Cg fill='%23ff9727'%3E%3Cuse xlink:href='%23s' x='8' y='3'/%3E%3Cuse xlink:href='%23s' x='4' y='2'/%3E%3Cuse xlink:href='%23s' x='5' y='4'/%3E%3Cuse xlink:href='%23s' x='10' y='0'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='e' width='47' height='23' patternUnits='userSpaceOnUse'%3E%3Cg fill='%23ff7a00'%3E%3Cuse xlink:href='%23s' x='2' y='5'/%3E%3Cuse xlink:href='%23s' x='23' y='13'/%3E%3Cuse xlink:href='%23s' x='4' y='18'/%3E%3Cuse xlink:href='%23s' x='35' y='9'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='f' width='61' height='31' patternUnits='userSpaceOnUse'%3E%3Cg fill='%23ff7a00'%3E%3Cuse xlink:href='%23s' x='16' y='0'/%3E%3Cuse xlink:href='%23s' x='13' y='22'/%3E%3Cuse xlink:href='%23s' x='44' y='15'/%3E%3Cuse xlink:href='%23s' x='12' y='11'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23a)' width='83' height='41.5'/%3E%3Crect fill='url(%23b)' width='83' height='41.5'/%3E%3Crect fill='url(%23c)' width='83' height='41.5'/%3E%3Crect fill='url(%23d)' width='83' height='41.5'/%3E%3Crect fill='url(%23e)' width='83' height='41.5'/%3E%3Crect fill='url(%23f)' width='83' height='41.5'/%3E%3C/svg%3E");*/
    /*background-attachment: fixed;*/
    /*background-size: cover;*/
}

#section1{
    
}

#section2{
    
}

#section3{
    
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Open Sans Condensed', sans-serif;
    font-size: 1.1rem;
    font-weight: 500;
}

b {
    font-weight: 700 !important;
}

.patternbackground {
    background-color: var(--page-orange);
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='544' height='544' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%236c6f7a' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23ff9d57'%3E%3Ccircle cx='769' cy='229' r='7'/%3E%3Ccircle cx='539' cy='269' r='7'/%3E%3Ccircle cx='603' cy='493' r='7'/%3E%3Ccircle cx='731' cy='737' r='7'/%3E%3Ccircle cx='520' cy='660' r='7'/%3E%3Ccircle cx='309' cy='538' r='7'/%3E%3Ccircle cx='295' cy='764' r='7'/%3E%3Ccircle cx='40' cy='599' r='7'/%3E%3Ccircle cx='102' cy='382' r='7'/%3E%3Ccircle cx='127' cy='80' r='7'/%3E%3Ccircle cx='370' cy='105' r='7'/%3E%3Ccircle cx='578' cy='42' r='7'/%3E%3Ccircle cx='237' cy='261' r='7'/%3E%3Ccircle cx='390' cy='382' r='7'/%3E%3C/g%3E%3C/svg%3E");
}

.whitebackground {
	background-color:var(--page-white);
}

#header {
    padding: 50px 0;
    text-align: center;
    color: var(--page-white);
}

#header img {
    margin: 30px 0;
    display: inline-block;
    padding: 0px 15px;
    width: 250px;
    max-width: 50vw;
}

#header h2 {
    font-weight: 700;
    font-size: 1.75rem;
}

#header .right, #header .left {
    width: 50vw;
    margin: 0 auto;
    padding: 15px 0;
    vertical-align: top;
}


#header .left {
    text-align: center;
}

#header .left #info {
    display: inline-block;
    text-align: left;
}

#header .left #info h2:nth-child(2) {
    margin-bottom: 20px;
}

#header .super-title {
    color: white;
    text-transform: uppercase;
    font-weight: 600;
}

#header .right {
    margin-top: 0px;
}

#header .right #desc {
    font-size: 15rem;
    line-height: 1.5rem;
    text-align: justify;
}


#header .left #info {
    text-align: center;
}

.info-container {
    padding: 15px;
}

.centered{
    display: flex;
    justify-content: center;
}
/* ... */

